@@ -29,6 +29,47 @@ This component represents a
 
 <p>TODO: Almost everything.
 
+<p>The following example shows, in addition to starting GXemul with a
+template machine, how to add <tt>mips_cpu</tt> components to the configuration.
+To add a specific CPU model, e.g. R4400, type <tt>mips_cpu(model=R4400)</tt>
+instead of just <tt>mips_cpu</tt>.
+
+<pre>
+$ <b>gxemul -V -e testmips</b>
+GXemul (unknown version)      Copyright (C) 2003-2009  Anders Gavare
+
+  mainbus0
+  |-- ram0  (32 MB at offset 0)
+  |-- rom0  (16 MB at offset 0x1fc00000)
+  \-- cpu0  (5KE, 100 MHz)
+
+GXemul> <b>add mips_cpu mainbus0</b>
+GXemul> <b>root</b>
+  root
+  \-- machine0  [testmips]
+      \-- mainbus0
+          |-- ram0  (32 MB at offset 0)
+          |-- rom0  (16 MB at offset 0x1fc00000)
+          |-- cpu0  (5KE, 100 MHz)
+          \-- cpu1  (5KE, 100 MHz)
+
+  accuracy = cycle
+  step     = 0
+GXemul> <b>add mips_cpu(model=R4400) mainbus0</b>
+GXemul> <b>root</b>
+  root
+  \-- machine0  [testmips]
+      \-- mainbus0
+          |-- ram0  (32 MB at offset 0)
+          |-- rom0  (16 MB at offset 0x1fc00000)
+          |-- cpu0  (5KE, 100 MHz)
+          |-- cpu1  (5KE, 100 MHz)
+          \-- cpu2  (R4400, 100 MHz)
+
+  accuracy = cycle
+  step     = 0
+GXemul> 
+</pre>
 
 <p>
 Source code documentation for this component can be found
